--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@
 #
 # SPDX-License-Identifier: MIT
 
-name: esaip_lessons_server
+name: flutter_app_server
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -52,6 +52,9 @@ dependencies:
   shelf_router: ^1.1.4
 
   uuid: ^4.5.1
+  sqflite: ^2.4.2
+  path: ^1.9.1
+  sqflite_common_ffi: ^2.3.5
 
 dev_dependencies:
   flutter_test:
